--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vuetify-project",
   "version": "0.0.0",
+  "author": "vuetify-element-admin",
   "scripts": {
     "dev": "vite --host",
     "serve": "vite --host",
@@ -8,16 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@handsontable/vue3": "^14.2.0",
+    "@kangc/v-md-editor": "^2.3.18",
     "@mdi/font": "^7.4.47",
     "@types/three": "^0.162.0",
     "array-move": "^4.0.0",
     "axios": "^1.6.8",
     "babel-plugin-import": "^1.13.8",
     "echarts": "^5.5.0",
-    "element-plus": "^2.7.1",
+    "element-plus": "^2.7.3",
     "file-saver": "^2.0.5",
     "handsontable": "^14.2.0",
+    "highlight.js": "^11.9.0",
     "litegraph.js": "^0.7.18",
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
@@ -42,8 +46,9 @@
     "less": "^4.2.0",
     "sass": "^1.71.1",
     "typescript": "^5.4.2",
+    "unplugin-auto-import": "^0.17.6",
     "unplugin-fonts": "^1.1.1",
-    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-components": "^0.27.0",
     "vite": "^5.1.5",
     "vite-plugin-vuetify": "^2.0.3",
     "vue-tsc": "^2.0.6"
